# Bloom-Sphere---Nasa-Space-App-Challenge-

./: README.md
BloomWatchViz/: app.py  pyproject.toml
BloomWatchViz/BloomWatchViz/: replit.md
BloomWatchViz/BloomWatchViz/data/: sample_locations.json
BloomWatchViz/BloomWatchViz/database/: db_manager.py
BloomWatchViz/BloomWatchViz/pages/: 1_Global_Bloom_Map.py  2_Data_Upload.py  3_Analytics_Dashboard.py  5_Bloom_Predictions.py  6_Species_Analysis.py  7_Comparative_Analysis.py  8_Ecological_Impacts.py
BloomWatchViz/BloomWatchViz/utils/: bloom_predictor.py  export_manager.py  nasa_earthdata.py  satellite_processor.py  species_identifier.py  vegetation_indices.py
BloomWatchViz/attached_assets/: Pasted-Tracking-when-where-and-how-extensively-plants-bloom-opens-up-exciting-possibilities-from-unraveli-1759594536719_1759594536720.txt  Pasted-streamlit-errors-StreamlitDuplicateElementId-There-are-multiple-plotly-chart-elements-with-the-same-1759601259297_1759601259298.txt
BloomWatchViz/database/: schema.sql
BloomWatchViz/pages/: 4_NASA_Data_Discovery.py
BloomWatchViz/utils/: ecological_impact.py  map_utils.py  ui_components.py
