[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "rasterio>=1.4.3",
    "streamlit-folium>=0.25.3",
    "streamlit>=1.50.0",
    "plotly>=6.3.1",
    "numpy>=2.3.3",
    "folium>=0.20.0",
    "matplotlib>=3.10.6",
    "scipy>=1.16.2",
    "pillow>=11.3.0",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.10",
    "scikit-learn>=1.7.2",
    "openpyxl>=3.1.5",
    "requests>=2.32.5",
]
